goodness of fit 1st lecture

--- a/seccion_04_scipy/clase_4_1.ipynb
+++ b/seccion_04_scipy/clase_4_1.ipynb
@@ -2062,7 +2062,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "4973cece",
+   "id": "c0132d27",
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a555ed04",
+   "id": "99291938",
    "metadata": {},
    "source": [
     "Estamos interesados en todas aquellas observaciones tales que la ley de cobre de alimentación es distinta de cero, y donde la recuperación es mayor que un 70%. Por lo tanto, efectuamos dicho filtro:"
@@ -2193,7 +2193,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "28f91cf7",
+   "id": "a9af27bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2262,7 +2262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c094959e",
+   "id": "859f9dd4",
    "metadata": {},
    "source": [
     "Siempre es buena idea, previo a construir una estimación de tipo KDE para una función de densidads bidimensional, visualizar nuestra data conforme un gráfico de dispersión, a fin de tener una idea general de cómo debe ser dicha estimación:"
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d68ebd5",
+   "id": "ba624adc",
    "metadata": {},
    "source": [
     "En esta oportunidad, haremos uso de la clase `LeaveOneOut()` de **Scikit-Learn** para explicitar nuestra estrategia de validación cruzada. Además, es preciso notar que los procesos de ajuste realizados por modelos instanciados a partir de objetos de **Scikit-Learn** requieren tener una geometría de `m` filas por `n` columnas, donde `m` hace referencia al número de observaciones que constituyen nuestra data, y `n` al número de variables que la caracterizan. Por esta razón, el input del método `fit()` será la concatenación por columnas de cada variable (ley y recuperación):"
@@ -2304,7 +2304,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "88c0291c",
+   "id": "c2cb3462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2404,7 +2404,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "c6b4a9d3",
+   "id": "2b944e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "d647fa37",
+   "id": "e23c5b0b",
    "metadata": {},
    "outputs": [
     {
@@ -2436,7 +2436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "362861c3",
+   "id": "6b1e66e8",
    "metadata": {},
    "source": [
     "Ya hemos ajustado nuestro modelo. Ahora graficaremos los resultados obtenidos mediante este estimador. Para este caso, definiremos una grilla para construir tal visualización, limitada por los valores máximos y mínimos de cada una de las dos variables involucradas:"
@@ -2497,7 +2497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81ded2c",
+   "id": "40ca6c80",
    "metadata": {},
    "source": [
     "¡Nada mal! Con la información anterior, podemos incluso construir una visualización tridimensional de esta función de densidad estimada:"
@@ -2506,7 +2506,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5f61dbab",
+   "id": "ea3f113a",
    "metadata": {},
    "outputs": [
     {
@@ -2537,122 +2537,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879b85c8",
+   "id": "23f6926b",
    "metadata": {},
    "source": [
     "◼\n",
     "### Bondad de ajuste.\n",
     "En el **Ejemplo 1.4**, estimamos la función de densidad conjunta relativa a dos variables que suponíamos que eran realizaciones de un par de variables aleatorias cuya distribución es desconocida. Este es el escenario en prácticamente la gran mayoría de problemas que guardan estrecha relación con datos y, por lo tanto, es importante contar con alguna herramienta que nos permita ajustar una distribución teórica a una distribución observada, obteniendo como resultado alguna métrica que nos indique si efectivamente hay un ajuste de buena calidad. Un procedimiento de este tipo, que describe lo bien que se ajusta un conjunto de observaciones a un función de distribución teórica, se conoce como **bondad de ajuste**.\n",
     "\n",
+    "**Estimación de máxima verosimilitud.**\n",
+    "\n",
     "El módulo `scipy.stats` dispone de un método de ajuste de distribuciones de probabilidad basado en un procedimiento bien conocido en matemáticas y denominado **estimación de máxima verosimilitud** (MLE, del inglés *maximum likelihood estimation*). Dicho método permite estimar los parámetros de una distribución de probabilidad asumida que, suponemos, describe nuestra data.\n",
     "\n",
-    "Consideremos pues el caso en el cual estamos interesados en modelar un conjunto de observaciones del tipo $\\left\\{ \\mathbf{x}_{i} \\right\\}^{m}_{i=1}$, con $\\mathbf{x}_{i}\\in \\mathbb{R}^{n}$, que, suponemos, fueron extraídas de una variable aleatoria $n$-dimensional cuya función de densidad conjunta es desconocida, pero que puede expresarse mediante un conjunto finito de parámetros. El objetivo de la estimación de maxima verosimilitud es determinar los parámetros tales que la data observada tenga una probabilidad conjunta máxima. Para ello, escribimos los parámetros que definen la distribución conjunta como $\\mathbf{\\theta } = (\\theta_{1},...,\\theta_{k})^{\\top}\\in \\mathbb{R}^{k}$. De esta manera, la distribución conjunta puede expresarse como una *familia paramétrica* del tipo $\\left\\{ f\\left( \\ast ;\\mathbf{\\theta } \\right)  |\\mathbf{\\theta } \\in \\Omega \\right\\}$, donde $\\Omega$ es un subconjunto de $\\mathbb{R}^{k}$ que llamamos **espacio de parámetros**.\n",
+    "Para entender este concepto, es bueno partir definiendo lo que es un estimador propiamente tal. Consideremos pues un conjunto de $n$ variables aleatorias $X_{1},...,X_{n}$ cuyas realizaciones (observaciones) son $x_{1},...,x_{n}$, respectivamente. Asumiremos que estas variables aleatorias tienen una determinada distribución conjunta de probabilidad, la cual queda completamente determinada por un conjunto de parámetros que se agrupan en el vector $\\mathbf{\\theta}=(\\theta_{1},...,\\theta_{k})\\in \\mathbb{R}^{k}$. Diremos que los valores posibles que pueden tomar dichos parámetros conforman un espacio o dominio, denotado como $\\Omega$, y que llamamos **espacio de parámetros**.\n",
     "\n",
-    "Si evaluamos la función de densidad conjunta sobre nuestro conjunto de datos observados $\\mathbf{X}=\\left\\{ \\mathbf{x}_{i} \\right\\}^{m}_{i=1}$, obtenemos\n",
+    "Cualquier función de $X_{1},...,X_{n}$, digamos $u(X_{1},...,X_{n})$, que permita *estimar* $\\mathbf{\\theta}$ es llamada, valga la redundancia, **estimador puntual** de $\\mathbf{\\theta}$. De esta manera, si evaluamos la función $u$ sobre los correspondientes datos observados $x_{1},...,x_{n}$, obtendremos una **estimación puntual** de $\\mathbf{\\theta}$.\n",
     "\n",
-    "$$L_{n}\\left( \\theta \\right)  =L_{n}\\left( \\theta |\\mathbf{X} \\right)  =f_{n}\\left( \\mathbf{X} |\\theta \\right)$$\n",
+    "Supongamos pues que nuestro objetivo es encontrar un estimador puntual $u(X_{1},...,X_{n})$ tal que $u(x_{1},...,x_{n})$ es una *buena* estimación puntual $\\mathbf{\\theta}$. Por ejemplo, si planeamos extraer una muestra aleatoria $X_{1},...,X_{n}$ que es tal que sabemos que $X_{i}$ tiene una distribución normal con media $\\mu_{i}$ y varianza $\\sigma_{i}^{2}$ para todo $i=1,...,n$, entonces debemos encontrar una *buena* estimación de dichos parámetros usando para ello la data observada $x_{1},...,x_{n}$.\n",
+    "\n",
+    "Parece razonable suponer que una *buena* estimación del parámetro desconocido $\\mathbf{\\theta}$ sea una tal que el valor de $\\mathbf{\\theta}$ maximice la probabilidad de obtener la data observada, donde dicha probabilidad es llamada **verosimilitud**. De esta manera, si denotamos las funciones de densidad marginales para cada $X_{i}$ ($1\\leq i\\leq n$) como $f(x_{i}|\\mathbf{\\theta})$, entonces la función de densidad conjunta de $X_{1},...,X_{n}$, que denotaremos como $L(\\mathbf{\\theta})$, puede escribirse como\n",
+    "\n",
+    "$$L(\\mathbf{\\theta})=P(X_{1}=x_{1},...,X_{n}=x_{n})=f(x_{1}|\\mathbf{\\theta})\\cdots f(x_{n}|\\mathbf{\\theta})=\\displaystyle \\prod^{n}_{j=1} f(x_{j}|\\mathbf{\\theta})$$\n",
     "</p> <p style=\"text-align: right;\">$(1.10)$</p>\n",
     "\n",
-    "La función $f_{n}$ es llamada **función de verosimilitud**. Para el caso de $\\mathbf{X}$ sea una muestra de una variable aleatoria multidimensional donde cada componente sean variables aleatorias independientes e igualmente distribuidas, $f_{n}(\\mathbf{X} |\\theta)$ será igual al producto de las funciones marginales de densidad de cada una de dichas componentes:\n",
+    "El lado izquierdo de la Ec. (1.10) es, por supuesto, la definición de la función de densidad conjunta de probabilidad para $\\mathbf{X}=(X_{1},...,X_{n})$. El lado derecho resulta del hecho de que disponemos de una muestra aleatoria de datos, lo que implica por definición que las variables aleatorias $X_{1},...,X_{n}$ son independientes.\n",
     "\n",
-    "$$f_{n}(\\mathbf{X} |\\theta)=\\displaystyle \\prod^{n}_{j=1} f_{j}(\\mathbf{x}_{j} |\\theta)$$\n",
+    "Si la estimación de $\\mathbf{\\theta}$ es *buena* cuando la probabilidad (verosimilitud) de obtener la data observada como resultado de usar la correspondiente estimación $\\mathbf{\\hat \\theta}$ sobre la función de densidad que hemos supuesto como descriptora del vector aleatorio $\\mathbf{X}$, es claro que la estimación de maxima verosimilitud es equivalente a un problema de optimización donde el valor de $\\mathbf{\\hat \\theta}$ viene dado por\n",
+    "\n",
+    "$$\\mathbf{\\hat \\theta}=\\underset{\\theta\\in\\Omega}{\\operatorname{arg\\;max}}(L(\\mathbf{\\theta}))$$\n",
     "</p> <p style=\"text-align: right;\">$(1.11)$</p>\n",
     "\n",
-    "El objetivo de la estimación de máxima verosimilitud es encontrar los valores de los parámetros del modelo que maximicen el valor de $f_{n}$ en $\\Omega$. Esto es,\n",
+    "El valor específico $\\mathbf{\\hat \\theta}=\\mathbf{\\hat \\theta}_{n}(\\mathbf{x})\\in \\Omega$, donde $\\mathbf{x}=(x_{1},...,x_{n})\\in \\mathbb{R}^{n}$, que maximiza la **función de verosimilitud** $L(\\mathbf{\\theta})$ es llamado **estimación de máxima verosimilitud** para $\\mathbf{\\theta}$. Si la función $\\hat{\\mathbf{\\theta}}_{n} :\\mathbb{R}^{n} \\longrightarrow \\Omega$ así definida es una función de conjunto con aditividad finita (es decir, $\\hat{\\mathbf{\\theta } }_{n} \\left( A\\cup B\\right)  =\\hat{\\mathbf{\\theta } }_{n} \\left( A\\right)  +\\hat{\\mathbf{\\theta } }_{n} \\left( B\\right)  $ para todo par de conjuntos disjuntos $A$ y $B$), entonces $\\hat{\\mathbf{\\theta } }_{n}$ se denominará estimador de máxima verosimilitud de $\\mathbf{\\theta}$.\n",
     "\n",
-    "$$\\hat{\\theta } =\\arg \\max_{\\theta \\in \\Omega} L_{n}( \\theta |\\mathbf{X})$$\n",
-    "</p> <p style=\"text-align: right;\">$(1.12)$</p>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b060a02f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94e61136",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "961a92f9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "560bf0a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "273c1589",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19f7114f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a92fff6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96ae7116",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2119f0e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f32d0fb",
-   "metadata": {},
-   "source": [
-    "### Una introducción al concepto de simulación.\n",
+    "En la práctica, resulta conveniente trabajar con el logaritmo de la función de verosimilitud, y que se denota como $LL(\\mathbf{\\theta})$:\n",
     "\n",
-    "Vamos a finalizar esta primera parte comentando algunos hechos relativos al concepto de **simulación de Monte Carlo**. el cual corresponde a un método no determinista utilizado para aproximar expresiones de alta complejidad y que comúnmente resultan computacionalmente costosas de evaluar con exactitud."
+    "$$LL(\\mathbf{\\theta})=\\displaystyle \\log \\left( \\displaystyle \\prod^{n}_{j=1} f(x_{j}|\\mathbf{\\theta } )\\right)  =\\sum^{n}_{j=1} \\log \\left( f\\left( x_{j}|\\mathbf{\\theta } \\right)  \\right)$$\n",
+    "</p> <p style=\"text-align: right;\">$(1.12)$</p>\n",
+    "\n",
+    "Debido a que el logaritmo es una función monótona, el máximo de $LL(\\mathbf{\\theta})$ ocurre en el mismo valor de $\\mathbf{\\theta}$ para el caso de $L(\\mathbf{\\theta})$. Si $LL(\\mathbf{\\theta})$ es una función diferenciable en $\\mathbf{\\theta}=(\\theta_{1}, ..., \\theta_{k})$, entonces sabemos que las condiciones necesarias para la ocurrencia de un máximo (o mínimo) pueden resumirse en el cumplimiento de las $k$ ecuaciones de verosimilitud\n",
+    "\n",
+    "$$\\begin{array}{llll}&\\displaystyle \\frac{\\partial }{\\partial \\theta_{i} } \\left( LL\\left( \\theta_{i} \\right)  \\right)  &=&0\\\\ \\Longrightarrow &\\displaystyle \\frac{\\partial }{\\partial \\theta_{i} } \\left(\\displaystyle  \\sum^{n}_{j=1} \\log \\left( f\\left( x_{j}|\\theta_{i} \\right)  \\right)  \\right)  &=&0\\\\ \\Longrightarrow &\\displaystyle \\sum^{n}_{j=1} \\left(\\displaystyle  \\frac{1}{f\\left( x_{j}|\\theta_{i} \\right)  }\\displaystyle  \\frac{\\partial f}{\\partial \\theta_{i} } \\right)  &=&0\\end{array}$$\n",
+    "</p> <p style=\"text-align: right;\">$(1.13)$</p>\n",
+    "\n",
+    "Para algunas funciones de densidad, las ecuaciones anteriores tienen una solución algebraicamente cerrada. Sin embargo, en general, es recomendable el uso de métodos numéricos de optimización para encontrar las soluciones de (1.13).\n",
+    "\n",
+    "El preámbulo matemático anterior ya es suficiente para entender, en líneas generales, el significado de una prueba de bondad del ajuste basada en una estimación de máxima verosimilitud. En el caso del módulo `scipy.stats`, existe un listado de decenas de distribuciones respecto de las cuales podemos generar ajustes, y que podemos consultar en la correspondiente [documentación](https://docs.scipy.org/doc/scipy/reference/stats.html#continuous-distributions) oficial de **Scipy**.\n",
+    "\n",
+    "Es importante considerar que, previo a construir cualquier ajuste, será necesario conocer el dominio de la función de densidad inherente a la variable aleatoria que queremos ajustar. En general, un supuesto de este tipo siempre puede hacerse de forma razonable. Por ejemplo, si $X$ es una variable aleatoria que representa el consumo de combustible de un camión de extracción (CAEX), es claro que dicha variable tiene como rango el conjunto $\\mathbb{R}^{+}$. Este puede ser un supuesto grosero, ya que el consumo de combustibke de un CAEX no puede ser infinitamente grande, pero servirá como punto de partida.\n",
+    "\n",
+    "**Comparación de ajustes mediante el criterio de información de Akaike.**\n",
+    "\n",
+    "La estimación de máxima verosimilitud permite, valga la redundancia, estimar los parámetros que mejor se ajustan a una determinada función de densidad en comparación a un conjunto de valores observados. Sin embargo, dicho método no nos informa de la calidad del ajuste de manera sistemática. Si construimos $r$ ajustes, el método de máxima verosimilitud no tiene forma de determinar cuál de esos $r$ ajustes es el mejor. Para ello, necesitamos herramientas adicionales.\n",
+    "\n",
+    "Una de estas herramientas es el **criterio de información de Akaike (AIC)**, y que corresponde a un estimador del error de predicción y, por extensión, la calidad relativa de un modelo estadístico con respecto a un conjunto de datos dado. Dada una colección de modelos, el criterio de información de Akaike estima la calidad de cada uno, en relación al resto, y nos permite por tanto seleccionar el mejor de ellos.\n",
+    "\n",
+    "El AIC tiene sus fundamentos en la teoría de la información"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4fdb22e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
