synpy ans scipy.stats lectures last commit

--- a/seccion_04_scipy/clase_4_1.ipynb
+++ b/seccion_04_scipy/clase_4_1.ipynb
@@ -18,7 +18,6 @@
     "| Módulo        | Descripción                                                           |\n",
     "| :------------ | :-------------------------------------------------------------------- |\n",
     "| `stats`       | Especializado en el análisis estadístico sobre variables aleatorias.  |\n",
-    "| `linalg`      | Especializado en funciones relativas al álgebra lineal                |\n",
     "| `interpolate` | Especializado en métodos de interpolación                             |\n",
     "| `integrate`   | Especializado en cálculo de integrales conforme varios métodos        |\n",
     "| `optimize`    | Especializado en la optimización de funciones conforme varios métodos |\n",
@@ -987,7 +986,7 @@
    "id": "27e20378",
    "metadata": {},
    "source": [
-    "Debido a que nuestro estadístico de prueba es $Z=-2.963$ (`Z`) es menor que el valor umbral calculado `z_calc` para una prueba de hipótesis con un nivel de significación del 5%, contamos con suficiente evidencia estadística para rechazar la hipótesis nula en este caso.\n",
+    "Debido a que nuestro estadístico de prueba es menor que el valor umbral calculado `z_calc` para una prueba de hipótesis con un nivel de significación del 5%, contamos con suficiente evidencia estadística para rechazar la hipótesis nula en este caso.\n",
     "\n",
     "Lo anterior podemos ilustrarlo mediante el concepto de **región de rechazo**, la que corresponde a la región de la distribución considerada en la prueba de hipótesis (y contralada por el nivel de significación de la prueba) que permite definir para qué valores del estadístico de prueba aceptamos la hipótesis nula (o no). Conforme lo que revisamos previamente, la región de rechazo para la prueba de hipótesis que establece que la media es igual a un valor determinado, con varianza conocida, se define como\n",
     "\n",
@@ -1013,7 +1012,7 @@
    "id": "82863f64",
    "metadata": {},
    "source": [
-    "Por lo tanto, la prueba de hipótesis debiera rechazarse si el estadístico de prueba es menor que `min_bound`, o mayor que `max_bound`. De lo anterior, dado que `Z = -2,963`, y"
+    "Por lo tanto, la prueba de hipótesis debiera rechazarse si el estadístico de prueba es menor que `min_bound`, o mayor que `max_bound`. De lo anterior, dado que"
    ]
   },
   {
@@ -4056,7 +4055,10 @@
    "id": "ea199f43",
    "metadata": {},
    "source": [
-    "Y en efecto, el p-valor es mayor que 0.05 y, por lo tanto, aceptamos la hipótesis nula: $F_{n}(x)\\leq F(x)$ para todo $x$. ◼"
+    "Y en efecto, el p-valor es mayor que 0.05 y, por lo tanto, aceptamos la hipótesis nula: $F_{n}(x)\\leq F(x)$ para todo $x$. ◼\n",
+    "\n",
+    "## Comentarios finales.\n",
+    "Este primer acercamiento a **Scipy**, por medio del módulo `scipy.stats`, nos ha permitido aprender una buena cantidad de herramientas relativas al análisis estadístico, incluyendo la construcción de variables aleatorias, muestreos a partir de distribiciones completamente definidas por el usuario, pruebas de bondad de ajuste, estimaciones de funciones de densidad e incluso pruebas no parámetricas (como la prueba de Kolmogorov-Smirnov). En la siguiente sección, haremos un alto en nuestro viaje por algunos de los módulos de **Scipy** para aprender un poco de computación simbólica usando la librería **Sympy**, y que será muy útil en la formulación, resolución y simplificación de problemas de alta complejidad."
    ]
   }
  ],
