general corrections and modifications

--- a/Seccion 1 - Analisis de Datos con Numpy/clase_1_2.ipynb
+++ b/Seccion 1 - Analisis de Datos con Numpy/clase_1_2.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c96382c9",
    "metadata": {},
@@ -108,7 +107,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8b9ab659",
    "metadata": {},
@@ -142,7 +140,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f1fe5f16",
    "metadata": {},
@@ -175,7 +172,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "abe62e48",
    "metadata": {},
@@ -335,7 +331,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "233d7c37",
    "metadata": {},
@@ -553,12 +548,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3afbdcef",
    "metadata": {},
    "source": [
-    "Los arreglos resultantes de una división como la anterior pueden tener elementos indeterminados (`nan`) o con una magnitud demasiado grande (`inf`). Esto es porque, como cabría esperar, la división así definida requiere que los elementos del arreglo divisor sean todos distintos de cero.\n",
+    "Los arreglos resultantes de una división como la anterior pueden tener elementos indeterminados (`nan`) o con una magnitud demasiado grande (`inf`). Esto es porque, como cabría esperar, la división así definida requiere que los elementos del arreglo divisor sean todos distintos de cero. Esa es la razón por la cual **Numpy** nos da el aviso mediante un `RuntimeWarning`.\n",
     "\n",
     "Es justo preguntarnos si esta forma de multiplicar existe formalmente en el área del álgebra lineal. Y resulta que, en efecto, esta operación sí está bien definida. Para todo par de matrices $\\mathbf{A} =\\left\\{ a_{ij}\\right\\}$ y $\\mathbf{B} =\\left\\{b_{ij}\\right\\}$ en $\\mathbb{R}^{m\\times n}$, se define el **producto de Hadamard**, denotado como $\\mathbf{A} \\odot \\mathbf{B}$, como la matriz cuyos elementos son las multiplicaciones, posición a posición, de los elementos originales de las matrices $\\mathbf{A}$ y $\\mathbf{B}$. Es decir,\n",
     "\n",
@@ -698,7 +692,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "71091609",
    "metadata": {},
@@ -879,7 +872,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3dc4027b",
    "metadata": {},
@@ -934,7 +926,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "933b8486",
    "metadata": {},
@@ -986,7 +977,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e8cf691f",
    "metadata": {},
@@ -1028,7 +1018,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3a8a918b",
    "metadata": {},
@@ -1112,7 +1101,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "eb465bae",
    "metadata": {},
@@ -1143,7 +1131,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "27515686",
    "metadata": {},
@@ -1290,7 +1277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
