general corrections and modifications

--- a/Seccion 1 - Analisis de Datos con Numpy/clase_1_5.ipynb
+++ b/Seccion 1 - Analisis de Datos con Numpy/clase_1_5.ipynb
@@ -1705,7 +1705,7 @@
    "id": "fa56629c",
    "metadata": {},
    "source": [
-    "Ahora construiremos una función para ajustar un modelo de regresión lineal a un conjunto de $N$ variables agrupadas en un arreglo bidimensional, considerando los hiperparámetros de tolerancia, tasa de aprendizaje y número de iteraciones como argumentos por defecto:"
+    "Ahora construiremos una función para ajustar un modelo de regresión logística binaria a un conjunto de $N$ variables agrupadas en un arreglo bidimensional, considerando los hiperparámetros de tolerancia, tasa de aprendizaje y número de iteraciones como argumentos por defecto:"
    ]
   },
   {
@@ -2077,7 +2077,7 @@
     "\n",
     "Tal frontera se muestra en el gráfico de la Fig. (5.6). Observamos que ésta es, en efecto, una recta que separa las clases $y_{i}=1$ e $y_{i}=0$ en el conjunto de datos completo. Naturalmente, la calidad de nuestro modelo no es perfecta, puesto que podemos verificar claramente que existen puntos tales que $y_{i}=1$ al lado izquierdo de la frontera de decisión, donde, idealmente, deberían existir sólo puntos tales que $y_{i}=0$. También existen puntos tales que $y_{i}=0$ a la derecha de la frontera de decisión, donde, idealmente, sólo deberían existir puntos tales que $y_{i}=1$. Estos puntos mal clasificados son los errores que comete nuestro modelo.\n",
     "\n",
-    "![alt text](https://github.com/rquezadac/udd_data_analytics_lectures/blob/main/seccion_01_numpy/figures/fig_5_6.png?raw=true \"Logo Title Text 1\")\n",
+    "<p style=\"text-align: center;\"><img src=\"figures/fig_5_6.png\" width=\"800\"></p>\n",
     "<p style=\"text-align: center;\">Fig. (5.6): Fontera de decisión estimada por nuestro modelo</p>\n",
     "\n",
     "En términos más formales, sea $Y$ la variable aleatoria que representa los posibles valores que puede tomar la variable de respuesta (lo que implica que $Y=\\left\\{ 0,1\\right\\}  $). El modelo estima la probabilidad $P(Y=1)$. Es justo, por tanto, preguntarnos cuál es el mínimo valor de la probabilidad $P(Y=1)$ para el cual podemos asumir, con un nivel de confianza razonable, que, efectivamente $Y=1$. Parece justo establecer que ese valor debería ser $P(Y=1)=0.5$, que denota que es igualmente probable que $Y=1$ o $Y=0$. Dicha probabilidad se conoce, en la práctica, como valor umbral de clasificación (cut-off).\n",
