general modification and corrections

--- a/Seccion 1 - Analisis de Datos con Numpy/clase_1_3.ipynb
+++ b/Seccion 1 - Analisis de Datos con Numpy/clase_1_3.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "Podemos pensar entonces que el escalar `b = 2.0`, en el primero de los dos bloques de código anteriores, se *estira* en la dirección del eje 0, durante la operación `a + b`, para empatar su geometría (o dimensión) con la del arreglo `a`. Los nuevos elementos en `b`, como se ilustra en la Fig (3.1), son simplemente copias del escalar original. Naturalmente, este estiramiento no es más que una analogía, porque **Numpy** es lo suficientemente *listo* para usar el valor escalar original sin la necesidad de tener que hacer copias compatibles de los arreglos involucrados, que permitan que la operación se lleve a cabo. De esta manera, las operaciones algebraicas como la del ejemplo anterior pueden llevarse a cabo con la mayor eficiencia posible en sus cómputos.\n",
     "\n",
-    "![alt text](https://github.com/rquezadac/udd_data_analytics_lectures/blob/main/seccion_01_numpy/figures/fig_3_1.png?raw=true \"Logo Title Text 1\")\n",
+    "<p style=\"text-align: center;\"><img src=\"figures/fig_3_1.png\" width=\"700\"></p>\n",
     "<p style=\"text-align: center;\">Fig. (3.1): Esquema de broadcasting entre un arreglo 1D y un escalar</p>\n",
     "\n",
     "El caso anterior es muy sencillo. Sin embargo, el broadcasting ocurre siempre que operamos con arreglos en cualquier dimensión. Consideremos en esta oportunidad un arreglo `M` de estructura bidimensional:"
@@ -179,7 +179,7 @@
    "source": [
     "Vemos pues que el arreglo unidimensional a se estira a lo largo del eje 0, a fin de poder generar un match con la geometría de `M `y que la operación `M + a` tenga sentido y pueda ser ejecutada sin ningún problema, como se ilustra en la Fig. (3.2). Nuevamente, esto es una mera analogía que nunca ocurre en la realidad, y que sólo se establece para entender cómo opera el proceso de broadcasting.\n",
     "\n",
-    "![alt text](https://github.com/rquezadac/udd_data_analytics_lectures/blob/main/seccion_01_numpy/figures/fig_3_2.png?raw=true \"Logo Title Text 1\")\n",
+    "<p style=\"text-align: center;\"><img src=\"figures/fig_3_2.png\" width=\"700\"></p>\n",
     "<p style=\"text-align: center;\">Fig. (3.2): Esquema de broadcasting entre un arreglo 2D y un arreglo 1D</p>\n",
     "\n",
     "Los casos presentados previamente son sencillos de entender. Sin embargo, en la práctica, el broadcasting de arreglos puede dar lugar a situaciones bastante más complicadas. Consideremos, por ejemplo, el siguiente caso:"
@@ -251,7 +251,7 @@
    "source": [
     "Tal y como ocurrió en los ejemplos anteriores, donde habíamos estirado un valor para generar un match entre las geometrías de cada arreglo, aquí hemos estirado ambos, `u` y `v`, para generar un match respecto a una geometría común para ambos arreglos, y el resultado es un arreglo de geometría `(3, 3)`. La representación el broadcasting subyacente a esta operación se representa en la Fig. (3.3).\n",
     "\n",
-    "![alt text](https://github.com/rquezadac/udd_data_analytics_lectures/blob/main/seccion_01_numpy/figures/fig_3_3.png?raw=true \"Logo Title Text 1\")\n",
+    "<p style=\"text-align: center;\"><img src=\"figures/fig_3_3.png\" width=\"1000\"></p>\n",
     "<p style=\"text-align: center;\">Fig. (3.3): Esquema de broadcasting entre dos arreglos en ejes distintos</p>\n",
     "\n",
     "## Reglas de broadcasting.\n",
